[gd_scene load_steps=15 format=3 uid="uid://c470vup8fia17"]

[ext_resource type="PackedScene" uid="uid://cd1j5w4sb7i4w" path="res://model/window/scene.gltf" id="1_r2whe"]
[ext_resource type="Script" path="res://script/mobs/the_watcher/window.gd" id="2_uicrv"]
[ext_resource type="AudioStream" uid="uid://b3cjg1epneadq" path="res://sound/mobs/the_watcher/watcher_spawn_1.ogg" id="3_ra4c4"]
[ext_resource type="AudioStream" uid="uid://cb72pbgqndtt" path="res://sound/mobs/the_watcher/window_open.ogg" id="3_tgfje"]
[ext_resource type="Script" path="res://script/mobs/the_watcher/the_watcher_raycast.gd" id="3_wd4p8"]
[ext_resource type="AudioStream" uid="uid://0uifhi7l7oba" path="res://sound/mobs/the_watcher/watcher_spawn_2.ogg" id="4_u4sul"]
[ext_resource type="PackedScene" uid="uid://c4k81y2s6w1fu" path="res://scene/mobs/the_watcher/the_watcher.tscn" id="7_45wot"]

[sub_resource type="Animation" id="Animation_5w6ra"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode/01/L:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(38.4415, -30.4682, 1.43592)]
}

[sub_resource type="Animation" id="Animation_ds1dx"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode/01/L:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(38.4415, -30.4682, 1.43592), Vector3(38.4415, 25.2949, 1.43592)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cv7h"]
_data = {
"RESET": SubResource("Animation_5w6ra"),
"open": SubResource("Animation_ds1dx")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qgcph"]
shading_mode = 0
diffuse_mode = 3
specular_mode = 2
disable_ambient_light = true
albedo_color = Color(0.646029, 0.646029, 0.646029, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_4cb8w"]
material = SubResource("StandardMaterial3D_qgcph")

[sub_resource type="PlaneMesh" id="PlaneMesh_jmwmd"]
material = SubResource("StandardMaterial3D_qgcph")
size = Vector2(2, 3.995)

[sub_resource type="PlaneMesh" id="PlaneMesh_0q4d7"]
material = SubResource("StandardMaterial3D_qgcph")
size = Vector2(2, 3.995)

[node name="Window" instance=ExtResource("1_r2whe")]
script = ExtResource("2_uicrv")
watcherSpawnSounds = Array[AudioStream]([ExtResource("3_ra4c4"), ExtResource("4_u4sul")])

[node name="Sketchfab_model" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 2.22045e-16, 1, 0, -1, 2.22045e-16, 0, 0.748782, 0)

[node name="CINEMA_4D_Editor" parent="Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode" index="0"]
visible = false

[node name="Base_Glass_0" parent="Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode/01/Base" index="1"]
cast_shadow = 0

[node name="R_Glass_0" parent="Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode/01/R" index="1"]
cast_shadow = 0

[node name="L" parent="Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode/01" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.4415, -30.4682, 1.43592)

[node name="L_Glass_0" parent="Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode/01/L" index="1"]
cast_shadow = 0

[node name="02" parent="Sketchfab_model/955b5cf0327f4626a3bfcfe5545111d1_fbx/Object_2/RootNode" index="2"]
visible = false

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." index="2"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_0cv7h")
}

[node name="FakeSun" type="SpotLight3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 2.40736, -0.633934)
light_color = Color(0.552956, 0.552956, 0.552956, 1)
light_energy = 10.0
light_indirect_energy = 10.0
light_cull_mask = 4294967293
shadow_enabled = true

[node name="FakeSky" type="Node3D" parent="." index="4"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="FakeSky" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.156771, -0.777845)
mesh = SubResource("PlaneMesh_4cb8w")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="FakeSky" index="1"]
transform = Transform3D(1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 2.86084, -0.777845)
mesh = SubResource("PlaneMesh_4cb8w")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="FakeSky" index="2"]
transform = Transform3D(2.98023e-08, -1, 1.19209e-07, 0, 1.19209e-07, 1, -1, 5.96046e-08, -7.10543e-15, 0.762939, 1.52418, -1.05126)
mesh = SubResource("PlaneMesh_jmwmd")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="FakeSky" index="3"]
transform = Transform3D(5.76204e-08, 1, -1.19209e-07, 0, 1.19209e-07, 1, 1, -1.47027e-07, 1.7527e-14, -0.738893, 1.52418, -1.03659)
mesh = SubResource("PlaneMesh_jmwmd")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="FakeSky" index="4"]
transform = Transform3D(-1, 1.49012e-07, -1.77636e-14, 0, 1.19209e-07, 1, 5.96046e-08, 1, -1.19209e-07, -0.0338969, 1.52418, -1.39104)
mesh = SubResource("PlaneMesh_0q4d7")
skeleton = NodePath("../..")

[node name="TheWatcher" type="Node3D" parent="." index="5"]

[node name="TheWatcherInsideSpawn" type="Node3D" parent="TheWatcher" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.01657)

[node name="TheWatcherRaycast" type="RayCast3D" parent="TheWatcher" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50541, -0.511509)
enabled = false
collision_mask = 3
script = ExtResource("3_wd4p8")

[node name="EnterSound" type="AudioStreamPlayer3D" parent="TheWatcher" index="2"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.408554, 1.03263, 0)
stream = ExtResource("3_tgfje")

[node name="SpawnSound" type="AudioStreamPlayer3D" parent="TheWatcher" index="3"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5169, -0.639805)

[node name="TheWatcherActiveTimer" type="Timer" parent="TheWatcher" index="4"]
unique_name_in_owner = true
one_shot = true

[node name="TheWatcherModel" parent="TheWatcher" index="5" instance=ExtResource("7_45wot")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.456827)
